<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Datos">

    <RadioGroup
        android:id="@+id/radioGroupVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMostrar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioVerEnergia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_ver_energia" />

        <RadioButton
            android:id="@+id/radioVerAgua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_ver_agua" />

        <RadioButton
            android:id="@+id/radioVerTodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_ver_todos" />
    </RadioGroup>

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_mostrar"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroupVer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/radioGroupVer"
        app:layout_constraintTop_toTopOf="@+id/radioGroupVer" />

    <ListView
        android:id="@+id/listViewDatos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupVer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>